syntax = "proto3";

package calculate;

option go_package = "calculator/calculatepb";

message Sum {
    int64 firstnum  = 1;
    int64 secondnum = 2;
}

message SumRequest {
    Sum sum = 1;
}

message SumResponse {
    int64 result = 1;
}

message PrimeRequest {
    int64 num = 1;
}

message PrimeResponse {
    int64 result = 1;
}

service CalculatorService {
    rpc calculate(SumRequest) returns (SumResponse) {};
    rpc PrimeNumberDecomposition(PrimeRequest) returns (stream PrimeResponse) {};
}